brat/test/golden/error/multilambda-id3.brat.golden
Error in test/golden/error/multilambda-id3.brat@2:15-18
f = { true => |;||false =>|;|;|}
              ^^^

  Elab error "Noun required at this position"

